[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Assets/Machines/RockCrusher_Frame.png" type="Texture" id=1]
[ext_resource path="res://Src/Machines/RockGrinder.gd" type="Script" id=2]
[ext_resource path="res://Src/Assets/Machines/RockCrusher_conveyer1.png" type="Texture" id=4]
[ext_resource path="res://Src/Assets/Machines/RockCrusher_Grinders-1-update.png" type="Texture" id=5]
[ext_resource path="res://Src/Assets/Machines/RockCrusher_Base.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.5, 38 )

[node name="RockGrinder" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="RockCrusherFrame" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="RockCrusherBase" type="Sprite" parent="."]
position = Vector2( -5, -86 )
texture = ExtResource( 6 )

[node name="RockCrusherConveyer" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="RockCrusherGrinders" type="Sprite" parent="."]
position = Vector2( -6, -81 )
scale = Vector2( 1.23881, 1 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 11, 1 )
polygon = PoolVector2Array( -150, 30, -91, 30, -90, 69, -69, 69, -66, 177, -123, 182, -123, 252, 28, 252, 25, 69, 71, 70, 69, 48, 80, 55, 118, 53, 133, 48, 131, -77, 118, -94, 88, -96, 70, -79, 71, -171, 26, -169, 26, -233, -67, -233, -66, -166, -89, -167, -89, -134, -90, -89, -150, -89 )

[node name="PlaceRocks" type="Area2D" parent="."]
position = Vector2( -104.5, 214 )

[node name="PlaceCollision" type="CollisionShape2D" parent="PlaceRocks"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="PlaceRocks" to="." method="_on_PlaceRocks_body_entered"]
[connection signal="body_exited" from="PlaceRocks" to="." method="_on_PlaceRocks_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
